--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -30,6 +30,7 @@ Enhancements
 * Journald total file size is now capped at 1Gb (PR #2389)
 * Allow sources to be cloned (PR #2395)
 * Visually split Administration and Authentication rules when viewing sources (PR #2395)
+* Ability to run "fixpermissions" from the web admin GUI (PR #2398)
 
 Bug Fixes
 +++++++++
