Update news for PR #2387

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -31,6 +31,7 @@ Enhancements
 * Allow sources to be cloned (PR #2395)
 * Visually split Administration and Authentication rules when viewing sources (PR #2395)
 * Ability to run "fixpermissions" from the web admin GUI (PR #2398)
+* Add sd_notify support to most of the sbin/ daemons (PR #2387)
 
 Bug Fixes
 +++++++++
