make instructions clearer in upgrade guide

--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -358,7 +358,7 @@ You must then disable the MariaDB Galera cluster as a replication mechanism as y
 
 You must also instruct packetfence-mariadb to bind to the management IP address of the server manually.
 
-In order to do so, change the following section in `/usr/local/pf/conf/mariadb/mariadb.conf.tt`:
+In order to do so, replace the following section in `/usr/local/pf/conf/mariadb/mariadb.conf.tt`:
 
   [% IF server_ip.length %]
   bind-address=[% server_ip %]
