--- a/docs/PacketFence_Administration_Guide.asciidoc
+++ b/docs/PacketFence_Administration_Guide.asciidoc
@@ -697,6 +697,13 @@ and a switch section for each switch (managed by PacketFence) including:
 NOTE: `switches.conf` is loaded at startup. A reload is required when changes 
 are manually made to this file `/usr/local/pf/bin/pfcmd configreload`.
 
+Import from CSV
+^^^^^^^^^^^^^^^
+From PacketFence 7.2 and onwards, you have the possibility to import switches from a CSV.
+
+Guidelines
+
+
 Working modes
 ^^^^^^^^^^^^^
 
