--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -36,6 +36,7 @@ Enhancements
 * Ability to run "fixpermissions" from the web admin GUI (PR #2398)
 * Add sd_notify support to most of the sbin/ daemons (PR #2387)
 * Allowed haproxy captive portal rate-limiting to be configurable (PR #2422)
+* Use the regular samba mechanisms to locate and select DCs (PR #2410)
 
 Bug Fixes
 +++++++++
