NEWS file entry for PR #2393

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -47,6 +47,7 @@ Bug Fixes
 * Limit the amount of tasks a worker processes to avoid memory from growing
 * REJECT role isn't honored in inline and some web-auth (#2383)
 * Sponsor authentication CC address is now BCC to help preserve privacy (#2267)
+* Use plain HTTP for network access detection page (#2393)
 
 Version 7.1.0 released on 2017-06-01
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
