--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -37,6 +37,7 @@ Enhancements
 * Add sd_notify support to most of the sbin/ daemons (PR #2387)
 * Allowed haproxy captive portal rate-limiting to be configurable (PR #2422)
 * Use the regular samba mechanisms to locate and select DCs (PR #2410)
+* New pfcmd command pfcmd pfqueue clear_expired_counters to clear the expired task counters (PR #2433)
 
 Bug Fixes
 +++++++++
