NEWS file entry for PR #2443

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -49,6 +49,7 @@ Bug Fixes
 * REJECT role isn't honored in inline and some web-auth (#2383)
 * Sponsor authentication CC address is now BCC to help preserve privacy (#2267)
 * Use plain HTTP for network access detection page (#2393)
+* Fixes leftover httpd processes when restarting (#2439)
 
 Version 7.1.0 released on 2017-06-01
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
